--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "A Node.js RESTful API project with a list of Star Wars planets.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
     "url": "git://github.com/lfmnovaes/sw_planets.git"
   },
   "keywords": [
-    "npm"
+    "node",
+    "RESTful",
+    "api",
+    "StarWars",
+    "planets"
   ],
   "author": "Luis Fernando <lfmnovaes@gmail.com>",
   "license": "MIT",
@@ -20,6 +25,10 @@
   },
   "homepage": "https://github.com/lfmnovaes/sw_planets#readme",
   "dependencies": {
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.6"
   }
 }
