--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.3.11",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "superagent": "^4.0.0-beta.5",
+    "then-request": "^6.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.6"
