--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "sw_planets",
   "version": "1.0.0",
   "description": "A Node.js RESTful API project with a list of Star Wars planets.",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha --timeout 10000",
     "start": "nodemon server.js"
   },
   "repository": {
@@ -32,6 +32,9 @@
     "then-request": "^6.0.0"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "mocha": "^5.2.0",
     "nodemon": "^1.18.6"
   }
 }
